# damage-detector

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: main.cpp  shortcut.h
